[package]
name = "upt-please"
version = "0.1.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "Universal package management tool for any OS"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/upt"
repository = "https://github.com/sigoden/upt"
categories = ["command-line-utilities"]
keywords = ["universal", "package", "management"]

[dependencies]
which = "6.0.1"

[profile.release]
opt-level     = "z"
codegen-units = 1
panic = "abort"
debug = false
lto   = true
rpath = false
strip = true

[[bin]]
name = "please"
path = "src/bin/please.rs"
