[package]
name = "upt-please"
version = "0.1.1"
edition = "2021"
authors = ["Rodrigo Cacilhas <montegasppas@cacilhas.info>"]
description = "Universal package management tool for any OS"
license = "MIT"
homepage = "https://github.com/cacilhas/upt-please"
repository = "https://github.com/cacilhas/upt-please"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = []

[dependencies]
which = "6.0.1"

[profile.release]
opt-level     = "z"
codegen-units = 1
panic = "abort"
debug = false
lto   = true
rpath = false
strip = true

[[bin]]
name = "please"
path = "src/bin/please.rs"
